--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -187,13 +187,14 @@ body {
 }
 .movie-list__release-year {
   font-size: 1rem;
+  font-style: italic;
 }
 .movie-list .fa-regular {
   font-size: 1.25rem;
 }
 .movie-list__rating {
   font-size: 1.25rem;
-  padding: 0 1rem 1rem;
+  padding: 0 12px 12px 1rem;
   color: #f6c700;
   cursor: pointer;
   border-radius: 50%;
